      UPGRADE: Added ability to display inbound email messages in Script tab
        scripts.
  * Add upstream Rev. 2862:
    - New dispo_change_status.php: Allow changing of a lead's status to a
        different status after it has been dispositioned as a specified 
        status a set number of times.
  * Add phone_code to phonebook (2017-058):
    - Add new fields to contact_information.
  * Add upstream Rev. 2863:
    - non_agent_api.php: Fixed issue with duplicate custom fields.
  * Add upstream Rev. 2864:
    - functions.php: Fixed issue with duplicate custom fields.
  * Add upstream Rev. 2865:
    - vdc_db_query.php,
    - vicidial.php,
    - admin.php,
    - help.php,
    - UPGRADE: Added agent_screen_time_display option.

2.25.20
  [Jörg Frings-Fürst]
  * help.php: add missing '<'.
  * New DB-Schema 1527: (2017-054)
    - vicidial_list: Increase the size of the field alt_phone to 18.
    - WallBoardStat: add maxwaittime and Tmaxwaittime.
  * Add upstream Rev. 2856:
    - dispo_send_email.php: Added ALL-STATUSES option and called_count_trigger
      option.
  * Add upstream Rev. 2857:
    - dispo_send_email.php: Added additional_notes option and email attachments
      options(1-5).
  * AST_CRON_WallBoard3_gen.php:
    - Add maxwaittime.
  * Wall_js.php:
    - Add maxwaittime.
    - Add AnzeigeNull with default 'n'.
  * WallBoard3.php:
    -  Add AnzeigeNull with default 'n'.
  * Release 2.25.20 2017-11-21.

2.25.19

  [Jörg Frings-Fürst]
  * AST_CRON_WallBoard3_gen.php:
    - Typo InGroup Search.
    - Add function GetServicelevel.
    - Replace mysqli_fetch_row with mysqli_fetch_array.
  * New DB-Schema 1526: (2017-053)
    - Add servicelevel_* to system_settings.
  * admin.php:
    - Add servicelevel_* to system_settings.
    - Rename Git Release to Patch-Level.
  * help.php:
    - Add help for servicelevel.
    - Add missing help for dectect 3way calls.
  * Add upstream Rev. 2855:
    - functions.php,
      vdc_db_query.php,